<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/superLayout"
    tools:context=".Login.HealthGoalActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="16dp"
            android:padding="24dp"
            android:id="@+id/mainrel">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hiwe_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="54dp"
                android:id="@+id/top_logo"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Let us know how\ncan we help you"
                android:layout_below="@id/top_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/spd_semibold"
                android:textSize="32dp"
                android:id="@+id/tv_verify"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You can always change this later"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/spd_medium"
                android:layout_below="@id/tv_verify"
                android:layout_marginTop="24dp"
                android:textSize="16dp"
                android:textColor="@color/gray"
                android:gravity="center"
                android:id="@+id/tv_bottom"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:layout_below="@id/tv_bottom"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:text="@string/health_goal_1"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:fontFamily="@font/spd_semibold"
                    android:paddingLeft="12dp"
                    android:textColor="@drawable/text_color_selector_radio_button"                    android:background="@drawable/custom_radio_button"
                    android:button="@android:color/transparent"
                    android:textSize="20dp"
                    android:id="@+id/health_goal_1"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/custom_radio_button"
                    android:paddingLeft="12dp"
                    android:text="@string/health_goal_2"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:fontFamily="@font/spd_semibold"
                    android:textColor="@drawable/text_color_selector_radio_button"                    android:button="@android:color/transparent"
                    android:textSize="20dp"
                    android:id="@+id/health_goal_2"/>


                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/custom_radio_button"
                    android:text="@string/health_goal_3"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="12dp"
                    android:checked="false"
                    android:fontFamily="@font/spd_semibold"
                    android:textColor="@drawable/text_color_selector_radio_button"
                    android:button="@android:color/transparent"
                    android:textSize="20dp"
                    android:id="@+id/health_goal_3"/>


                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/custom_radio_button"
                    android:text="@string/health_goal_4"
                    android:paddingLeft="12dp"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:fontFamily="@font/spd_semibold"
                    android:textColor="@drawable/text_color_selector_radio_button"
                    android:button="@android:color/transparent"
                    android:textSize="20dp"
                    android:id="@+id/health_goal_4"/>


                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/custom_radio_button"
                    android:text="@string/health_goal_5"
                    android:layout_marginTop="20dp"
                    android:checked="false"
                    android:paddingLeft="12dp"
                    android:fontFamily="@font/spd_semibold"
                    android:textColor="@drawable/text_color_selector_radio_button"
                    android:button="@android:color/transparent"
                    android:textSize="20dp"
                    android:id="@+id/health_goal_5"/>

            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Continue"
                android:layout_below="@id/radioGroup"
                android:background="@drawable/orange_rectangle_10"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/spd_semibold"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:id="@+id/btn_continue"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:id="@+id/progress_bar"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>